--- a/source/sass/components/_widget.scss
+++ b/source/sass/components/_widget.scss
@@ -13,3 +13,33 @@
     	height: auto;
 	}
 }
+
+.skandesydost-header {
+	&__link {
+		display: inline-block;
+		position: relative;
+
+		&::after {
+			content: "";
+			display: block;
+			position: absolute;
+			left: 0;
+			right: 0;
+			top: 0;
+			bottom: 0;
+			background-color: rgba(0,0,0,0);
+			transform: scale(1.2);
+			transition: background-color .2s, transform .2s .05s;
+		}
+
+		&:hover {
+			background-color: transparent !important; /* reset other hover styling */
+			text-decoration: none;
+
+			&::after {
+				background-color: rgba(0,0,0,.05);
+				transform: scale(1.3);
+			}
+		}
+	}
+}
